Let nginx serve fonts

--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -16,7 +16,7 @@ server {
 
         access_log  /var/log/nginx/boilerplate.access.log;
 
-        location ~ ^/(img/|css/|js/|robots.txt|humans.txt) {
+        location ~ ^/(img/|css/|js/|fonts/|robots.txt|humans.txt) {
                 root   /srv/boilerplate/boilerplate/server/public;
                 access_log off;
                 expires max;
