Update nginx.conf with error log and static file filters

--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -15,9 +15,10 @@ server {
         server_name example.com alternative.example.com;
 
         access_log  /var/log/nginx/boilerplate.access.log;
+        error_log   /var/log/nginx/boilerplate.error.log;
 
-        location ~ ^/(img/|css/|js/|fonts/|robots.txt|humans.txt) {
-                root   /srv/boilerplate/boilerplate/server/public;
+        location ~ ^/(img/|css/|js/|fonts/|robots.txt|humans.txt|favicon.ico|apple-touch-icon-precomposed.png) {
+                root   /srv/boilerplate/boilerplate/public;
                 access_log off;
                 expires max;
         }
