Updated dependencies and set default session name.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jade": "^1.8.2",
     "libby": "~2.2.2",
     "moment": "^2.8.4",
-    "mongoose": "^3.8.0",
+    "mongoose": "~3.8.0",
     "passport": "^0.2.0",
     "passport-google-oauth": "^0.1.0",
     "redis": "^0.12.1",
@@ -41,7 +41,7 @@
     "browserify": "",
     "chai": "",
     "cheerio": "",
-    "groc": "strekmann/groc",
+    "grunt": "",
     "grunt-browserify": "",
     "grunt-cli": "",
     "grunt-contrib-concat": "",
