--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "dependencies": {
+    "alt": "^0.16.10",
     "async": "^0.9.0",
     "bunyan": "^1.2.3",
     "bunyan-request-logger": "^0.2.3",
@@ -26,6 +27,7 @@
     "express-validator": "^2.3.0",
     "hiredis": "",
     "i18n-abide": "",
+    "iso": "^4.1.0",
     "jade": "^1.8.2",
     "libby": "~2.2.2",
     "lodash": "^3.9.3",
