--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "alt": "^0.16.10",
     "async": "^0.9.0",
+    "axios": "^0.5.4",
     "bunyan": "^1.2.3",
     "bunyan-request-logger": "^0.2.3",
     "connect-redis": "^2.1.0",
