expires max allows for no errors

--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -20,7 +20,7 @@ server {
         location ~ ^/(img/|css/|js/|fonts/|robots.txt|humans.txt|favicon.ico|apple-touch-icon-precomposed.png) {
                 root   /srv/boilerplate/boilerplate/public;
                 access_log off;
-                expires max;
+                expires 1d;
         }
 
         location / {
