--- a/package.json
+++ b/package.json
@@ -2,59 +2,19 @@
   "author": "strekmann",
   "name": "boilerplate",
   "description": "project",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "homepage": "",
   "private": true,
   "repository": {
     "type": "git",
     "url": ""
   },
-  "engines": {
-    "node": "0.10"
-  },
   "scripts": {
-    "start": "node cluster.js",
+    "start": "node index.js",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "connect-redis": "^2.1.0",
-    "express": "^4.8.3",
-    "express-validator": "^2.3.0",
-    "hiredis": "",
-    "i18n-abide": "",
-    "jade": "^1.8.2",
-    "libby": "~2.2.2",
-    "moment": "^2.8.4",
-    "mongoose": "~3.8.0",
-    "passport": "^0.2.0",
-    "passport-google-oauth": "^0.1.0",
-    "redis": "^0.12.1",
-    "underscore": "^1.7.0",
-    "uslug": "^1.0.0",
-    "express-bunyan-logger": "^1.1.0",
-    "bunyan": "^1.2.3",
-    "bunyan-request-logger": "^0.2.3"
   },
   "devDependencies": {
-    "bower": "",
-    "browserify": "",
-    "chai": "",
-    "cheerio": "",
-    "grunt": "",
-    "grunt-browserify": "",
-    "grunt-cli": "",
-    "grunt-contrib-concat": "",
-    "grunt-contrib-copy": "",
-    "grunt-contrib-jshint": "",
-    "grunt-contrib-uglify": "",
-    "grunt-contrib-watch": "",
-    "grunt-i18n-abide": "",
-    "grunt-sass": "",
-    "mocha": "",
-    "supertest": "",
-    "through": "",
-    "uglify-js": "",
-    "passport-stub": "^1.0.1"
   }
 }
