--- a/package.json
+++ b/package.json
@@ -14,7 +14,22 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
+    "bunyan": "^1.5.1",
+    "config": "^1.19.0",
+    "express": "^4.13.4",
+    "history": "^2.0.0-rc2",
+    "lodash": "^4.0.1",
+    "moment": "^2.11.1",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^2.1.0",
+    "redux": "^3.0.6",
+    "redux-thunk": "^1.0.3",
+    "serve-static": "^1.10.2",
+    "socket.io": "^1.4.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
