--- a/package.json
+++ b/package.json
@@ -17,19 +17,31 @@
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "config": "^1.19.0",
+    "es6-promise": "^3.0.2",
     "express": "^4.13.4",
     "history": "^2.0.0-rc2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.1",
     "moment": "^2.11.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^2.1.0",
     "redux": "^3.0.6",
+    "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.2",
     "socket.io": "^1.4.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.4.3",
+    "webpack": "^1.12.12"
+  }
 }
