--- a/package.json
+++ b/package.json
@@ -13,23 +13,28 @@
     "node": "0.12"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha"
+    "test": "NODE_ENV=test mocha --require test/setup",
+    "build": "gulp build",
+    "watch": "gulp",
+    "lint": "gulp lint",
+    "start": "node dev.js"
   },
   "dependencies": {
-    "alt": "^0.16.10",
     "async": "^0.9.0",
     "axios": "^0.5.4",
+    "babel-core": "^6.4.5",
+    "babel-polyfill": "^6.3.14",
+    "babel-register": "^6.4.3",
     "bunyan": "^1.2.3",
     "bunyan-request-logger": "^0.2.3",
     "connect-redis": "^2.1.0",
     "express": "^4.8.3",
     "express-bunyan-logger": "^1.1.0",
     "express-validator": "^2.3.0",
-    "hiredis": "",
-    "i18n-abide": "",
+    "hiredis": "^0.4.0",
+    "history": "^2.0.0-rc2",
     "immutable": "^3.7.4",
-    "iso": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "jade": "^1.8.2",
     "libby": "~2.2.2",
     "lodash": "^3.9.3",
@@ -38,32 +43,39 @@
     "node-jsx": "^0.13.3",
     "passport": "^0.2.0",
     "passport-google-oauth": "^0.1.0",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.23.5",
+    "react": "^0.14.6",
+    "react-bootstrap": "^0.28.2",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "react-router": "^2.0.0-rc5",
     "redis": "^0.12.1",
+    "redux": "^3.0.6",
+    "redux-thunk": "^1.0.3",
     "shortid": "^2.2.2"
   },
   "devDependencies": {
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "bootstrap-sass": "^3.3.5",
-    "chai": "",
-    "cheerio": "",
+    "chai": "^3.5.0",
+    "cheerio": "^0.19.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^4.0.0",
+    "eslint-plugin-react": "^3.16.1",
     "expose-loader": "^0.7.0",
     "font-awesome": "^4.3.0",
-    "grunt": "",
-    "grunt-cli": "",
-    "grunt-contrib-concat": "",
-    "grunt-contrib-copy": "",
-    "grunt-contrib-jshint": "",
-    "grunt-contrib-watch": "",
-    "grunt-i18n-abide": "",
-    "grunt-react": "^0.12.2",
-    "grunt-sass": "",
-    "grunt-webpack": "^1.0.10",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-sass": "^2.1.1",
+    "gulp-util": "^3.0.7",
     "jsx-loader": "^0.13.2",
-    "mocha": "",
+    "mocha": "^2.4.4",
     "passport-stub": "^1.0.1",
     "supertest": "",
     "webpack": "^1.10.0",
-    "webpack-dev-server": "^1.10.1"
+    "webpack-dev-server": "^1.10.1",
+    "webpack-stream": "^3.1.0"
   }
 }
