--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bunyan": "^1.2.3",
     "bunyan-request-logger": "^0.2.3",
     "connect-redis": "^2.1.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.8.3",
     "express-bunyan-logger": "^1.1.0",
     "express-validator": "^2.3.0",
@@ -36,13 +37,14 @@
     "immutable": "^3.7.4",
     "isomorphic-fetch": "^2.2.1",
     "jade": "^1.8.2",
-    "libby": "~2.2.2",
+    "libby": "^2.3.0",
     "lodash": "^3.9.3",
     "moment": "^2.8.4",
     "mongoose": "~3.8.0",
     "node-jsx": "^0.13.3",
-    "passport": "^0.2.0",
+    "passport": "^0.3.2",
     "passport-google-oauth": "^0.1.0",
+    "passport.socketio": "^3.6.1",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
@@ -51,7 +53,8 @@
     "redis": "^0.12.1",
     "redux": "^3.0.6",
     "redux-thunk": "^1.0.3",
-    "shortid": "^2.2.2"
+    "shortid": "^2.2.2",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
