--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "redux": "^3.0.6",
     "redux-thunk": "^1.0.3",
     "shortid": "^2.2.2",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
