--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "config": "^1.19.0",
+    "errorhandler": "^1.4.3",
     "es6-promise": "^3.0.2",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "history": "^2.0.0-rc2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.1",
+    "method-override": "^2.3.5",
     "moment": "^2.11.1",
+    "passport-local": "^1.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
