--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.2",
-    "socket.io": "^1.4.4"
+    "socket.io": "^1.4.4",
+    "superagent": "^1.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
