--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "config": "^1.19.0",
+    "connect-redis": "^3.0.2",
+    "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
-    "es6-promise": "^3.0.2",
     "express": "^4.13.4",
+    "express-bunyan-logger": "^1.2.0",
     "express-session": "^1.13.0",
     "history": "^2.0.0-rc2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.1",
     "method-override": "^2.3.5",
     "moment": "^2.11.1",
+    "mongoose": "^4.4.2",
+    "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.6.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
@@ -38,6 +43,7 @@
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.2",
+    "shortid": "^2.2.4",
     "socket.io": "^1.4.4",
     "superagent": "^1.7.2"
   },
