--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-redis": "^3.0.2",
     "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
+    "es6-promise": "^3.0.2",
     "express": "^4.13.4",
     "express-bunyan-logger": "^1.2.0",
     "express-session": "^1.13.0",
@@ -44,8 +45,7 @@
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.2",
     "shortid": "^2.2.4",
-    "socket.io": "^1.4.4",
-    "superagent": "^1.7.2"
+    "socket.io": "^1.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
