--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "url": ""
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha",
+    "build": "gulp build",
+    "watch": "gulp",
+    "lint": "gulp lint",
+    "start": "node dev.js"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
@@ -35,6 +38,7 @@
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.6.1",
     "react": "^0.14.6",
+    "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
@@ -54,6 +58,15 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.4.3",
-    "webpack": "^1.12.12"
+    "bootstrap-sass": "^3.3.6",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-plugin-react": "^3.16.1",
+    "font-awesome": "^4.5.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-sass": "^2.2.0",
+    "webpack": "^1.12.12",
+    "webpack-stream": "^3.1.0"
   }
 }
