--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "config": "^1.19.0",
     "connect-redis": "^2.1.0",
     "cookie-parser": "^1.4.1",
+    "es6-promise": "^3.0.2",
     "express": "^4.8.3",
     "express-bunyan-logger": "^1.1.0",
     "express-validator": "^2.3.0",
