--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
+    "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^3.0.0",
     "redis": "^0.12.1",
     "redux": "^3.0.6",
+    "redux-logger": "^2.5.0",
     "redux-socket.io": "0.0.2",
     "redux-thunk": "^1.0.3",
     "shortid": "^2.2.2",
