--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-jsx": "^0.13.3",
     "passport": "^0.3.2",
     "passport-google-oauth": "^0.1.0",
+    "passport-local": "^1.0.0",
     "passport.socketio": "^3.6.1",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
