--- a/package.json
+++ b/package.json
@@ -21,28 +21,25 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "axios": "^0.5.4",
-    "babel-core": "^6.4.5",
-    "babel-polyfill": "^6.3.14",
-    "babel-register": "^6.4.3",
+    "body-parser": "^1.15.0",
     "bunyan": "^1.2.3",
     "bunyan-request-logger": "^0.2.3",
     "config": "^1.19.0",
     "connect-redis": "^2.1.0",
     "cookie-parser": "^1.4.1",
-    "es6-promise": "^3.0.2",
+    "errorhandler": "^1.4.3",
     "express": "^4.8.3",
     "express-bunyan-logger": "^1.1.0",
+    "express-session": "^1.13.0",
     "express-validator": "^2.3.0",
     "hiredis": "^0.4.0",
     "history": "^2.0.0-rc2",
     "immutable": "^3.7.4",
     "isomorphic-fetch": "^2.2.1",
-    "libby": "^2.3.0",
     "lodash": "^3.9.3",
+    "method-override": "^2.3.5",
     "moment": "^2.8.4",
     "mongoose": "~3.8.0",
-    "node-jsx": "^0.13.3",
     "passport": "^0.3.2",
     "passport-google-oauth": "^0.1.0",
     "passport-local": "^1.0.0",
@@ -59,11 +56,15 @@
     "redux-logger": "^2.5.0",
     "redux-socket.io": "0.0.2",
     "redux-thunk": "^1.0.3",
+    "serve-static": "^1.10.2",
     "shortid": "^2.2.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-polyfill": "^6.3.14",
+    "babel-register": "^6.4.3",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
@@ -74,13 +75,11 @@
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^4.0.0",
     "eslint-plugin-react": "^3.16.1",
-    "expose-loader": "^0.7.0",
     "font-awesome": "^4.3.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^1.1.1",
     "gulp-sass": "^2.1.1",
     "gulp-util": "^3.0.7",
-    "jsx-loader": "^0.13.2",
     "mocha": "^2.4.4",
     "passport-stub": "^1.0.1",
     "supertest": "",
