--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
+    "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^3.0.0",
     "redis": "^0.12.1",
     "redux": "^3.0.6",
