--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "history": "^2.0.0-rc2",
     "immutable": "^3.7.4",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^3.9.3",
+    "lodash": "^4.0.1",
     "method-override": "^2.3.5",
     "moment": "^2.8.4",
     "mongoose": "~3.8.0",
@@ -53,6 +53,7 @@
     "react-router-redux": "^3.0.0",
     "redis": "^0.12.1",
     "redux": "^3.0.6",
+    "redux-immutable": "^3.0.3",
     "redux-logger": "^2.5.0",
     "redux-socket.io": "0.0.2",
     "redux-thunk": "^1.0.3",
