--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,8 @@
         "brace-style": [ 2, "stroustrup", { "allowSingleLine": true } ],
         "quotes": [ 1, "single"],
         "no-unused-vars": [ 1, { "vars": "all", "args": "after-used", "argsIgnorePattern": "req|res|next" }],
-        "no-shadow": 1,
-        "no-param-reassign": 1,
+        "no-param-reassign": [2, {"props": false}],
+        "no-shadow": [2, {"allow": ["err"]}],
         "new-cap": [1, { "capIsNewExceptions": ["ImmutableStore", "List", "Map"] }],
         "comma-dangle": 1,
         "no-unused-expressions": 1,
