--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "nodemon": "nodemon src/dev.js | bunyan -o short"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^1.5.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "bunyan": "^1.2.3",
-    "bunyan-request-logger": "^0.2.3",
+    "bunyan-request-logger": "^1.0.0",
     "config": "^1.19.0",
-    "connect-redis": "^2.1.0",
+    "connect-redis": "^3.0.2",
     "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
     "express": "^4.8.3",
@@ -38,9 +38,9 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.1",
     "moment": "^2.8.4",
-    "mongoose": "~3.8.0",
+    "mongoose": "^4.4.5",
     "passport": "^0.3.2",
-    "passport-google-oauth": "^0.1.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.6.1",
     "react": "^0.14.6",
@@ -51,11 +51,11 @@
     "react-router": "^2.0.0-rc5",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^3.0.0",
-    "redis": "^0.12.1",
+    "redis": "^2.4.2",
     "redux": "^3.0.6",
     "redux-immutable": "^3.0.3",
     "redux-logger": "^2.5.0",
-    "redux-socket.io": "0.0.2",
+    "redux-socket.io": "^1.0.0",
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.2",
     "shortid": "^2.2.2",
@@ -72,13 +72,13 @@
     "babel-preset-react": "^6.3.13",
     "bootstrap-sass": "^3.3.5",
     "chai": "^3.5.0",
-    "cheerio": "^0.19.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^4.0.0",
-    "eslint-plugin-react": "^3.16.1",
+    "cheerio": "^0.20.0",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-plugin-react": "^4.1.0",
     "font-awesome": "^4.3.0",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^1.1.1",
+    "gulp-eslint": "^2.0.0",
     "gulp-sass": "^2.1.1",
     "gulp-util": "^3.0.7",
     "mocha": "^2.4.4",
