--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "bcrypt": "^0.8.5",
+    "bluebird": "^3.3.1",
     "body-parser": "^1.15.0",
     "bunyan": "^1.2.3",
     "bunyan-request-logger": "^1.0.0",
