--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "errorhandler": "^1.4.3",
     "express": "^4.8.3",
     "express-bunyan-logger": "^1.1.0",
+    "express-graphql": "^0.4.10",
     "express-session": "^1.13.0",
     "express-validator": "^2.3.0",
+    "graphql": "^0.4.18",
     "history": "^2.0.0-rc2",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
