Getting things to work

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
+    "passPerPreset": true,
     "presets": [
-        "es2015",
         "react",
+        "es2015",
+        "stage-0"
     ]
 }
