--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "strekmann",
   "name": "boilerplate",
   "description": "project",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "homepage": "",
   "private": true,
   "repository": {
@@ -17,6 +17,7 @@
     "build": "gulp build",
     "watch": "gulp",
     "lint": "gulp lint",
+    "schema": "babel-node ./setup/build-schema.js",
     "nodemon": "nodemon src/dev.js | bunyan -o short"
   },
   "dependencies": {
@@ -32,10 +33,11 @@
     "errorhandler": "^1.4.3",
     "express": "^4.8.3",
     "express-bunyan-logger": "^1.1.0",
-    "express-graphql": "^0.4.10",
+    "express-graphql": "^0.5.1",
     "express-session": "^1.13.0",
     "express-validator": "^2.3.0",
-    "graphql": "^0.4.18",
+    "graphql": "^0.5.0",
+    "graphql-relay": "^0.4.1",
     "history": "^2.0.0-rc2",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
@@ -66,16 +68,17 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
-    "babel-polyfill": "^6.3.14",
-    "babel-register": "^6.4.3",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^6.0.0",
     "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.4.3",
     "bootstrap-sass": "^3.3.5",
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
-    "eslint": "^2.2.0",
+    "eslint": "^2.9.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
     "font-awesome": "^4.3.0",
