--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
     "passPerPreset": true,
+    "plugins": [
+        "babel-relay-plugin-loader"
+    ],
     "presets": [
         "react",
         "es2015",
