--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-dom": "^15.0.0",
     "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
-    "react-relay": "^0.8.1",
+    "react-relay": "0.8.0",
     "react-router": "^2.0.0-rc5",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^3.0.0",
@@ -86,14 +86,16 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.4.3",
-    "babel-relay-plugin": "^0.8.1",
+    "babel-relay-plugin": "0.8.0",
     "babel-relay-plugin-loader": "^0.8.1",
     "bootstrap-sass": "^3.3.5",
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
     "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^6.0.2",
-    "eslint-plugin-react": "^4.1.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
     "font-awesome": "^4.3.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
