--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "isomorphic-relay": "^0.7.0-beta.0",
     "isomorphic-relay-router": "^0.8.0-beta.0",
     "lodash": "^4.0.1",
+    "material-ui": "^0.15.0",
     "moment": "^2.8.4",
     "mongoose": "^4.4.5",
     "passport": "^0.3.2",
