--- a/package.json
+++ b/package.json
@@ -57,21 +57,15 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.6.1",
-    "react": "^15.0.0",
+    "react": "^15.1.0",
     "react-bootstrap": "^0.28.2",
-    "react-dom": "^15.0.0",
+    "react-dom": "^15.1.0",
     "react-helmet": "^2.3.1",
-    "react-redux": "^4.0.6",
     "react-relay": "0.8.0",
     "react-router": "^2.0.0-rc5",
     "react-router-bootstrap": "^0.20.1",
-    "react-router-redux": "^3.0.0",
+    "react-tap-event-plugin": "^1.0.0",
     "redis": "^2.4.2",
-    "redux": "^3.0.6",
-    "redux-immutable": "^3.0.3",
-    "redux-logger": "^2.5.0",
-    "redux-socket.io": "^1.0.0",
-    "redux-thunk": "^1.0.3",
     "relay-local-schema": "^0.5.0",
     "serve-static": "^1.10.2",
     "socket.io": "^1.4.5",
